--- a/src/main.css
+++ b/src/main.css
@@ -5,18 +5,20 @@ body {
 
 #app {
   height: auto;
+  padding-bottom: 200px;
+  padding-left: 100px;
 }
 
 .container {
   /* display: flex; */
   position: relative;
-  width: 400px;
-  height: 500px;
+  width: 500px;
+  height: 600px;
   border: 2px solid lightgray;
 }
 
 .container h2 {
-  margin-left: 10px;
+  margin-left: 20px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
@@ -31,14 +33,15 @@ body {
   /* position: flex; */
   /* justify-content: center; */
   position: absolute;
-  top: 200px;
-  left: 100px;
-  width: 200px;
+  top: 50%;
+  left: 10%;
+  width: 400px;
 }
 
 .movie-box {
   /* position: flex; */
   /* justify-content: center; */
-  border: 2px solid lightgray;
-  padding: 10px;
+  border: 1px solid lightgray;
+  padding: 15px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
