--- a/src/main.css
+++ b/src/main.css
@@ -50,6 +50,14 @@ body {
   position: absolute;
   top: 60%;
   left: 13%;
+  border: 1px solid lightgray;
+}
+
+.search-button {
+  background-color: white;
+  border: 1px solid lightgray;
+  border-radius: 2px;
+  padding: 2px 10px;
 }
 
 .list-of-titles {
