Some bug fixes on watch checkbox

--- a/src/main.css
+++ b/src/main.css
@@ -42,6 +42,13 @@ body {
   left: 13%;
 }
 
+.watched-label {
+  float: right;
+  font-size: 12px;
+}
+
+
+
 .add-button {
   margin-left: 10px;
   border-radius: 4px;
